src/objects/CollectionTool__c.object
<CustomObject>
    <fields>
        <fullName>Type_of_Interface__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Type of Interface</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E2B</fullName>
                </value>
                <value>
                    <fullName>DB to DB Connection</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_New_System__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Type of New System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Global and Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Products__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Type of Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drugs</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Biologics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Guide_Translation_Required__c</fullName>
        <label>User Guide Translation Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YoY_Growth_of_Case_Versions__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>YoY Growth of Case Versions (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eTMF_Module__c</fullName>
        <label>eTMF Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eTMF SaaS Subscription</fullName>
                </value>
                <value>
                    <fullName>eTMF Essentials</fullName>
                </value>
                <value>
                    <fullName>eArchive</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>File Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iNarrative__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>iNarrative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Cohorts__c</fullName>
        <description>IQVIAPSA-8852</description>
        <inlineHelpText>Minimum 1</inlineHelpText>
        <label># of Cohorts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_EDC_Visits__c</fullName>
        <description>IQVIAPSA-8852</description>
        <inlineHelpText>Minimum 1</inlineHelpText>
        <label># of EDC Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Non_Partner_Integration_Update__c</fullName>
        <label># of Non Partner Integration Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Non_Partner_Integration__c</fullName>
        <label># of Non-Partner Integration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Studies_Licences__c</fullName>
        <label># of Studies(Licences)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Treatment_Arms__c</fullName>
        <description>IQVIAPSA-8852</description>
        <inlineHelpText>Minimum 1</inlineHelpText>
        <label># of Treatment Arms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Collection Tool</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Collection Tool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Tools</pluralLabel>
     <recordTypes>
        <fullName>GCC</fullName>
        <active>true</active>
        <description>IQVIAPSA-6784</description>
        <label>GCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>IQVIA_Technologies</fullName>
        <active>true</active>
        <label>IQVIA Technologies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Q2_Solutions</fullName>
        <active>true</active>
        <label>Q2 Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Solutions</fullName>
        <active>true</active>
        <description>IQVIAPSA-8851</description>
        <label>Tech Solutions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CT_VR01_OWF_ReqFieldsOnCompleteConsent</fullName>
        <active>true</active>
        <description>IQVIAPSA-8042</description>
        <errorConditionFormula>AND($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
RecordType.DeveloperName = &apos;IQVIA_Technologies&apos;,
Bid_History__r.Complete_Consent__c = TRUE,
ISPICKVAL(Type__c,&apos;Other&apos;),
OR(ISBLANK(Number_of_Sites__c),ISBLANK(TEXT(Countries__c))))</errorConditionFormula>
        <errorMessage>&apos;List the Countries (No abbreviations)&apos; and &apos;Number of Sites&apos; are mandatory for complete consent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CT_VR02_OWF_RequiredActivityId</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,RecordType.DeveloperName = &apos;Q2_Solutions&apos;, ISPICKVAL(Bid_History__r.Q2_Business_Area__c ,&apos;BioSciences&apos;),
    ISPICKVAL(Bid_History__r.Bid_Type__c ,&apos;Change Order&apos;), ISBLANK(Activity_ID__c),Bid_History__r.Bid_History_Related_Opportunity__r.Awarded_Date__c &lt;= DATE(2024,10,26)  
    )
</errorConditionFormula>
   <errorMessage>Required field validation, please enter the value in Activity ID field.</errorMessage>
</validationRules>
    <validationRules>
    <fullName>CT_VR03_OWF_BlankActivityID</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
RecordType.DeveloperName = &apos;Q2_Solutions&apos;, 
ISPICKVAL(Bid_History__r.Q2_Business_Area__c ,&apos;BioSciences&apos;),!ISBLANK(Activity_ID__c),
OR(ISPICKVAL(Bid_History__r.Bid_Type__c,&apos;Initial&apos;),
ISPICKVAL(Bid_History__r.Bid_Type__c ,&apos;Re-Bid&apos;),     AND(ISPICKVAL(Bid_History__r.Bid_Type__c ,&apos;Change Order&apos;), Bid_History__r.Bid_History_Related_Opportunity__r.Awarded_Date__c &gt; DATE(2024,10,26)  ))

)
</errorConditionFormula>
    <errorMessage>Please remove the value from &apos;Activity ID&apos; field.</errorMessage>
</validationRules>
    <validationRules>
        <fullName>CT_VR04_OWF_ReqFieldForPP</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
ISPICKVAL(Type__c, &apos;Other&apos;),
Bid_History__r.Participant_Payments__c, OR
(ISBLANK(Number_of_Enrolled_Patients__c),
ISBLANK(Screened_Patients__c),
ISBLANK(TEXT(Countries__c)))), true, false)</errorConditionFormula>
        <errorMessage>Please Fill &apos;List the Countries (No abbreviations),Number of Enrolled Patients and Screened Patients&apos; in Study Specifications&apos; Applicable to eCOA, Complete Consent, IRT, CD,PP</errorMessage>
    </validationRules>
</CustomObject>